--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"export-and-serve": "next build && next export && serve ./out",
 		"lint": "eslint ./",
 		"lint:fix": "eslint ./ --fix-dry-run",
-		"deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages"
+		"deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages",
+		"plop": "plop"
 	},
 	"dependencies": {
 		"@fluentui/react": "^8.9.4",
@@ -18,6 +19,7 @@
 		"classnames": "^2.3.1",
 		"next": "latest",
 		"next-auth": "^3.14.6",
+		"plop": "^2.7.4",
 		"postcss-flexbugs-fixes": "^5.0.2",
 		"postcss-hover-media-feature": "^1.0.1",
 		"postcss-preset-env": "^6.7.0",
