--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "gh-pages",
-	"version": "1.0.0",
+	"version": "0.0.1",
 	"scripts": {
-		"dev": "next",
+		"dev": "node server.js",
 		"build": "next build",
 		"start": "next start",
 		"export": "next build && next export",
@@ -17,6 +17,7 @@
 		"@reduxjs/toolkit": "^1.5.1",
 		"bootstrap": "^5.0.0-beta3",
 		"classnames": "^2.3.1",
+		"lodash": "^4.17.21",
 		"next": "latest",
 		"next-auth": "^3.14.6",
 		"plop": "^2.7.4",
