--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,17 @@
 		"baseUrl": ".",
 		"paths": {
 			"~components/*": ["components/*"],
+			"~forms/*": ["components/forms/*"],
+			"~modals/*": ["components/modals/*"],
+			"~layouts/*": ["components/layouts/*"],
+			"~lists/*": ["components/lists/*"],
+			"~ui/*": ["components/ui/*"],
 			"~styles/*": ["styles/*"],
 			"~store": ["store/index.ts"],
 			"~store/*": ["store/*"],
-			"~utils/*": ["utils/*"],
-			"~forms/*": ["components/forms/*"],
 			"~slices/*": ["store/slices/*"],
-			"~modals/*": ["components/modals/*"],
-			"~layouts/*": ["components/layouts/*"],
-			"~ui/*": ["components/ui/*"],
+			"~utils/*": ["utils/*"],
+			"~hooks/*": ["hooks/*"],
 			"~types/*": ["types/*"]
 		},
 		"target": "es5",
