--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "node server.js",
+		"start": "NODE_ENV=production node server.js",
 		"build": "next build",
-		"start": "next start",
 		"export": "next build && next export",
 		"export-and-serve": "next build && next export && serve ./out",
 		"lint": "eslint ./",
@@ -15,8 +15,10 @@
 	"dependencies": {
 		"@fluentui/react": "^8.9.4",
 		"@reduxjs/toolkit": "^1.5.1",
+		"axios": "^0.21.1",
 		"bootstrap": "^5.0.0-beta3",
 		"classnames": "^2.3.1",
+		"express": "^4.17.1",
 		"lodash": "^4.17.21",
 		"next": "latest",
 		"next-auth": "^3.14.6",
@@ -45,6 +47,7 @@
 		"eslint-plugin-import": "^2.22.1",
 		"eslint-plugin-react": "^7.23.2",
 		"eslint-plugin-react-hooks": "^4.2.0",
+		"http-proxy-middleware": "^1.3.1",
 		"postcss": "^8.2.10",
 		"prettier": "^2.2.1",
 		"typescript": "^4.2.3"
